# improved-pngquant

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  bootstrap  configure.ac  libimagequant.pc.in
